--- a/index.html
+++ b/index.html
@@ -6,14 +6,58 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2122</title>
+	<title>DUNKIN</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2122</h1>
+    <header>
+		<p><strong>Voor 9 uur besteld, vandaag in huis!</strong></p>
+		 <h1>DUNKIN</h1>
+	 </header>
+ 
+	 <main>
+  
+		<h3>WE LOVE COFFEE</h3>
+		<img src="DUMMY.jpg" alt=""></p>
+   
+		<h3>BESTEL</h3>
+		<p>Maak een keuze:</p>
+   
+		<button>BEZORGEN</button>
+		<button>AfHALEN</button>
+   
+		<section>
+		   <h2>BESTEL DUNKIN' ONLINE</h2>
+		   <ol>
+			 <li> VUL JE POSTCODE IN</li>
+			 <li> PLAATS JE BESTELLING</li>
+			 <li> VANDAAG IN HUIS</li>
+		   </ol>
+		</section>
+   
+		 <h2><strong>DD NIEUWS</strong></h2>
+   
+		 <p><strong>ALLE BLOGS</strong></p>
+   
+	   </main>
+
+    <footer>
+
+   <nav>
+    <ul  class="nav">
+    <li> <a class="current" href="index.html">STOREFINDER</a> </li>
+    <li> <a href="index2.html">JOBS</a> </li>
+    <li> <a href="index3.html">BLOG</a> </li>
+    <li> <a href="index4.html">OVER DUNKIN'</a> </li>
+  </ul>
+</nav>
+
+<p>2021 DD IP Holder | FAQ | Privacy Policy | Foodticket </p>
+
+    </footer>
 
 	<script src="scripts/script.js"></script>
 </body>
