--- a/index.html
+++ b/index.html
@@ -14,52 +14,96 @@
 
 <body>
     <header>
-		<p><strong>Voor 9 uur besteld, vandaag in huis!</strong></p>
-		 <h1>DUNKIN</h1>
-	 </header>
- 
-	 <main>
-  
-		<h3>WE LOVE COFFEE</h3>
-		<img src="DUMMY.jpg" alt=""></p>
-   
-		<h3>BESTEL</h3>
-		<p>Maak een keuze:</p>
-   
-		<button>BEZORGEN</button>
-		<button>AfHALEN</button>
-   
-		<section>
-		   <h2>BESTEL DUNKIN' ONLINE</h2>
-		   <ol>
-			 <li> VUL JE POSTCODE IN</li>
-			 <li> PLAATS JE BESTELLING</li>
-			 <li> VANDAAG IN HUIS</li>
-		   </ol>
-		</section>
-   
-		 <h2><strong>DD NIEUWS</strong></h2>
-   
-		 <p><strong>ALLE BLOGS</strong></p>
-   
-	   </main>
+		<p>Voor 9 uur besteld, vandaag in huis!</p>
+		<h1>DUNKIN</h1>
+	</header>
+<main>
+	<section>
+	<h2>WE LOVE COFFEE</h2>
+	<img src="images/coffee.png" alt="coffee">
+	</section>
+	
+	<section>
+	<h2>BESTEL!</h2>
+	<p>Maak een keuze:</p>
+	
+	<button type="button">BEZORGEN</button>
+	<button type="button">AFHALEN</button>
+	</section>
+	
+	<section>
+        <h2>BESTEL DUNKIN' ONLINE</h2>
 
-    <footer>
+	<article>
+	<h3>VUL JE POSTCODE IN</h3>
+		<img src="Images/icon1.jpg" alt="postcode">
+	<p>Zoek jij een store in de buurt? 
+		Gebruik de Dunkin' Storefinder.</p>
+	</article>
 
-   <nav>
-    <ul  class="nav">
-    <li> <a class="current" href="index.html">STOREFINDER</a> </li>
-    <li> <a href="index2.html">JOBS</a> </li>
-    <li> <a href="index3.html">BLOG</a> </li>
-    <li> <a href="index4.html">OVER DUNKIN'</a> </li>
-  </ul>
+	<article>
+		<h3>PLAATS JE BESTELLING</h3>
+		<img src="Images/icon2.jpg" alt="bestelling">
+		<p>Kies uit meer dan 200 verschillende donut smaken. 
+		Welke kies jij?</p>
+	</article>
+
+	<article>
+		<h3>VANDAAG IN HUIS</h3>
+		<img src="Images/icon3.jpg" alt="vandaag">
+		<p>Voor 9:00, Vandaag in huis!</p>
+	</article>
+	   
+	<a href="https://www.dunkin.nl/order-now">Order now</a>
+    </section>
+	
+	<section>
+	<h2><strong>App jij 'm al?</strong></h2>
+	<h3>DE DUNKIN" APP</h3>
+		<p>Lekker scoren met exclusieve coupons en leuke campanes met winacties.</p>
+		<a href="https://apps.apple.com/nl/app/dunkin-nlbe/id1446714644">
+			<img src="appstore"  alt="Available on the App Store"></a>
+		<a href="https://play.google.com/store/apps/details?id=co.za.wigroup.dunkindonuts&hl=nl&gl=US">
+			<img src="googleplay"  alt="Get it on Google Play"></a>
+	</section>
+	
+    <section>
+		 <h2><strong>Nieuw: Dunkin' Cloud Cakes</strong></h2>
+		 <img src="Dummy.jpg" alt="img">
+		 <p>Dunkin'Cloud Cakes! Het is heerlijk luchtig, heeft 8 verschillende smaken en is eind deze maand beschikbaar in Nederland en Belgie.</p>
+		 <a href="https://www.dunkin.nl/blogpost/dunkin-cloud-cakes">Lees meer</a>
+	</section>	
+
+	<section>
+		<h2><strong>DD NIEUWS</strong></h2>
+		<a href="https://www.dunkin.nl/blog">ALLE BLOGS</a>
+   </section>	
+
+</main>
+
+<footer>
+	<h2>DNKN</h2>
+<nav>
+	<ul  class="nav">
+	<li> <a class="current" href="index.html">STOREFINDER</a> </li>
+	<li> <a href="index2.html">JOBS</a> </li>
+	<li> <a href="index3.html">BLOG</a> </li>
+	<li> <a href="index4.html">OVER DUNKIN'</a> </li>
+</ul>
 </nav>
+
+<a href="https://www.tiktok.com/@dunkin_nl?">
+	<img src="tiktok.jpg"  alt="Tiktok"></a>
+<a href="https://www.instagram.com/dunkindonutsnl/">
+	<img src="instagram.jpg"  alt="Instagram"></a>
+<a href="https://www.facebook.com/dunkindonutsnl">
+	<img src="facebook.jpg"  alt="Facebook"></a>
 
 <p>2021 DD IP Holder | FAQ | Privacy Policy | Foodticket </p>
 
-    </footer>
+</footer>
 
-	<script src="scripts/script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 	
 </html>
