--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 <body>
     <header>
 		<p>Voor 9 uur besteld, vandaag in huis!</p>
-		<h1>DUNKIN</h1>
+	<!--<h1>DUNKIN</h1> -->
+		<img src="images/Primary_Logo®_HEX.svg" alt="coffee">
 	</header>
 <main>
+<ul>
+<li>
 	<section>
 	<h2>WE LOVE COFFEE</h2>
-	<img src="images/coffee.png" alt="coffee">
+	<img src="images/Coffee.png" alt="coffee">	
 	</section>
-	
+</li>
+<li>
 	<section>
 	<h2>BESTEL!</h2>
 	<p>Maak een keuze:</p>
@@ -30,13 +34,14 @@
 	<button type="button">BEZORGEN</button>
 	<button type="button">AFHALEN</button>
 	</section>
-	
+</li>
+</ul>
 	<section>
         <h2>BESTEL DUNKIN' ONLINE</h2>
 
 	<article>
 	<h3>VUL JE POSTCODE IN</h3>
-		<img src="Images/icon1.jpg" alt="postcode">
+		<img src="images/icon1.jpg" alt="postcode">
 	<p>Zoek jij een store in de buurt? 
 		Gebruik de Dunkin' Storefinder.</p>
 	</article>
@@ -59,7 +64,7 @@
 	
 	<section>
 	<h2><strong>App jij 'm al?</strong></h2>
-	<h3>DE DUNKIN" APP</h3>
+	<h4>DE DUNKIN" APP</h4>
 		<p>Lekker scoren met exclusieve coupons en leuke campanes met winacties.</p>
 		<a href="https://apps.apple.com/nl/app/dunkin-nlbe/id1446714644">
 			<img src="appstore"  alt="Available on the App Store"></a>
