--- a/index.html
+++ b/index.html
@@ -13,102 +13,116 @@
 </head>
 
 <body>
-    <header>
+	<header>
 		<p>Voor 9 uur besteld, vandaag in huis!</p>
 	<!--<h1>DUNKIN</h1> -->
-		<img src="images/Primary_Logo®_HEX.svg" alt="coffee">
+		<a href="https://mailygh.github.io/blokweb/index2.html">
+			<img src="images/Primary_Logo®_HEX.svg"  alt=""></a>
 	</header>
+	
 <main>
-<ul>
-<li>
-	<section>
-	<h2>WE LOVE COFFEE</h2>
-	<img src="images/Coffee.png" alt="coffee">	
-	</section>
-</li>
-<li>
-	<section>
-	<h2>BESTEL!</h2>
-	<p>Maak een keuze:</p>
-	
-	<button type="button">BEZORGEN</button>
-	<button type="button">AFHALEN</button>
-	</section>
-</li>
-</ul>
-	<section>
-        <h2>BESTEL DUNKIN' ONLINE</h2>
+	<ul>
+		<!-- 1 -->
+		<li>
+		<section>
+		<h2>WE LOVE COFFEE</h2>
+		<img src="images/Coffee.png" alt="coffee">	
+		</section>
+	</li>
+	<!-- 2 -->
+	<li>
+		<section>
+		<h2>BESTEL!</h2>
+		<p>Maak een keuze:</p>
+		
+		<button type="button">Bezorgen</button>
+		<button type="button">Afhalen</button>
 
-	<article>
-	<h3>VUL JE POSTCODE IN</h3>
-		<img src="images/icon1.jpg" alt="postcode">
-	<p>Zoek jij een store in de buurt? 
-		Gebruik de Dunkin' Storefinder.</p>
-	</article>
-
-	<article>
-		<h3>PLAATS JE BESTELLING</h3>
-		<img src="Images/icon2.jpg" alt="bestelling">
-		<p>Kies uit meer dan 200 verschillende donut smaken. 
-		Welke kies jij?</p>
-	</article>
-
-	<article>
-		<h3>VANDAAG IN HUIS</h3>
-		<img src="Images/icon3.jpg" alt="vandaag">
-		<p>Voor 9:00, Vandaag in huis!</p>
-	</article>
-	   
-	<a href="https://www.dunkin.nl/order-now">Order now</a>
-    </section>
-	
+		</section>
+	</li>
+	<!-- 3 -->
+	<li>
 	<section>
-	<h2><strong>App jij 'm al?</strong></h2>
-	<h4>DE DUNKIN" APP</h4>
-		<p>Lekker scoren met exclusieve coupons en leuke campanes met winacties.</p>
-		<a href="https://apps.apple.com/nl/app/dunkin-nlbe/id1446714644">
-			<img src="appstore"  alt="Available on the App Store"></a>
-		<a href="https://play.google.com/store/apps/details?id=co.za.wigroup.dunkindonuts&hl=nl&gl=US">
-			<img src="googleplay"  alt="Get it on Google Play"></a>
-	</section>
-	
-    <section>
-		 <h2><strong>Nieuw: Dunkin' Cloud Cakes</strong></h2>
-		 <img src="Dummy.jpg" alt="img">
-		 <p>Dunkin'Cloud Cakes! Het is heerlijk luchtig, heeft 8 verschillende smaken en is eind deze maand beschikbaar in Nederland en Belgie.</p>
-		 <a href="https://www.dunkin.nl/blogpost/dunkin-cloud-cakes">Lees meer</a>
-	</section>	
+		<h2><strong>App jij 'm al?</strong></h2>
+		<h3>DE DUNKIN" APP</h3>
+			<p>Lekker scoren met exclusieve coupons en leuke campagnes met winacties.</p>
+			<a href="https://apps.apple.com/nl/app/dunkin-nlbe/id1446714644">
+				<img src="images/googleplay.svg"  alt="Available on the App Store"></a>
+			<a href="https://play.google.com/store/apps/details?id=co.za.wigroup.dunkindonuts&hl=nl&gl=US">
+				<img src="images/appstore.svg"  alt="Get it on Google Play"></a>
+		</section>
+	</li>
+	<!-- 4 -->
+	<li>
+		<section>
+			<h2><strong>Nieuw: Dunkin' Cloud Cakes</strong></h2>
+			<img src="images/clouds.jpg" alt="img">
+			<p>Dunkin'Cloud Cakes! Het is heerlijk luchtig, heeft 8 verschillende smaken en is eind deze maand beschikbaar in Nederland en Belgie.</p>
+		</section>	
+		<a href="https://www.dunkin.nl/blogpost/dunkin-cloud-cakes">Lees meer</a>
+	</li>
+	<!-- 5 -->
+	<li>
+		<section>
+			<h2><strong>DD NIEUWS</strong></h2>
+			<a href="https://www.dunkin.nl/blog">ALLE BLOGS</a>
+		</section>	
+	</li>
+	</ul>
 
-	<section>
-		<h2><strong>DD NIEUWS</strong></h2>
-		<a href="https://www.dunkin.nl/blog">ALLE BLOGS</a>
-   </section>	
+		<article>
+			<h2>BESTEL DUNKIN' ONLINE</h2>
 
+		<section>
+		<h3>VUL JE POSTCODE IN</h3>
+			<img src="images/peace.svg" alt="postcode">
+		<p>Zoek jij een store in de buurt? 
+			Gebruik de Dunkin' Storefinder.</p>
+		</section>
+
+		<section>
+			<h3>PLAATS JE BESTELLING</h3>
+			<img src="images/donut.svg" alt="bestelling">
+			<p>Kies uit meer dan 200 verschillende donut smaken. 
+			Welke kies jij?</p>
+			</section>
+
+		<section>
+			<h3>VANDAAG IN HUIS</h3>
+			<img src="images/bestel.svg" alt="vandaag">
+			<p>Voor 9:00, Vandaag in huis!</p>
+		</section>
+		
+		<a href="https://www.dunkin.nl/order-now">Order now</a>
+		</article>
 </main>
 
 <footer>
-	<h2>DNKN</h2>
-<nav>
-	<ul  class="nav">
-	<li> <a class="current" href="index.html">STOREFINDER</a> </li>
-	<li> <a href="index2.html">JOBS</a> </li>
-	<li> <a href="index3.html">BLOG</a> </li>
-	<li> <a href="index4.html">OVER DUNKIN'</a> </li>
-</ul>
-</nav>
+	<h2><img src="images/rondje.svg" alt="img"></h2>
+	
+		<nav>
+		<ul  class="nav">
+		<li> <a class="current" href="index.html">STOREFINDER</a> </li>
+		<li> <a href="index2.html">CONTACT</a> </li>
+		<li> <a href="index2.html">BLOG</a> </li>
+		<li> <a href="index2.html">OVER DUNKIN'</a> </li>
+		</ul>
+		</nav>
+	<ol>
+		<li><a href="https://www.tiktok.com/@dunkin_nl?">
+			<img src="images/tiktok.svg"  alt="Tiktok"></a></li>
+		<li><a href="https://www.instagram.com/dunkindonutsnl/">
+			<img src="images/insta.svg"  alt="Instagram"></a></li>
+		<li><a href="https://www.facebook.com/dunkindonutsnl">
+			<img src="images/facebook.svg"  alt="Facebook"></a></li>
+	</ol>
 
-<a href="https://www.tiktok.com/@dunkin_nl?">
-	<img src="tiktok.jpg"  alt="Tiktok"></a>
-<a href="https://www.instagram.com/dunkindonutsnl/">
-	<img src="instagram.jpg"  alt="Instagram"></a>
-<a href="https://www.facebook.com/dunkindonutsnl">
-	<img src="facebook.jpg"  alt="Facebook"></a>
-
-<p>2021 DD IP Holder | FAQ | Privacy Policy | Foodticket </p>
+<p>2021 DD IP Holder | FAQ | Privacy Policy | Foodticket</p>
 
 </footer>
+	<a href="https://www.dunkin.nl/">Bron</a>
 
 <script src="scripts/script.js"></script>
 </body>
-	
+
 </html>
