--- a/index2.html
+++ b/index2.html
@@ -11,58 +11,68 @@
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
+
 <body>
   <header>
   <p><strong>Voor 9 uur besteld, vandaag in huis!</strong></p>
-    <h1>DUNKIN</h1>
+   <!--<h1>DUNKIN</h1>-->
+  <a href="https://mailygh.github.io/blokweb/">
+    <img src="images/Primary_Logo®_HEX.svg"  alt=""></a>
   </header>
- 
+  
 <main>
   <h2>CONTACT</h2>
   <h3>Neem contact op voor een offerte, hulp of sluit je aan bij ons team!</h3>
 
-  <img src="images/coffee.png" alt="coffee">
-  <p>INFO@DUNKINDONUTS.NL</p>
-  <img src="images/coffee.png" alt="coffee">
-  <p>088-377 8884</p>
+    <img src="images/contact.svg" alt="coffee">
+    <p>INFO@DUNKINDONUTS.NL</p>
+    <p>088-377 8884</p>
    
-    
   <h2><strong>JE BERICHT</strong></h2>
   
-    <form action="./submitted.html">
+  <form action="./submitted.html">
 
-      <fieldset>
-        <legend>Bericht</legend>
-         <label for="text">Type..</label>
-         <input type="text" id="text">
-       </fieldset>
-  
-       <input type="submit" value="Submit me!">
-      </form>
+    <fieldset>
+      <legend>Bericht</legend>
+      <label for="text">Type..</label>
+      <input type="text" id="text">
+    </fieldset>
+
+      <input type="submit" value="Submit me!">
+    </form>
 </main>
 
 <footer>
    <nav>
     <ul  class="nav">
     <li> <a class="current" href="index.html">STOREFINDER</a> </li>
-    <li> <a href="index2.html">JOBS</a> </li>
-    <li> <a href="index3.html">BLOG</a> </li>
-    <li> <a href="index4.html">OVER DUNKIN'</a> </li>
+    <li> <a href="index2.html">CONTACT</a> </li>
+    <li> <a href="index.html">BLOG</a> </li>
+    <li> <a href="index.html">OVER DUNKIN'</a> </li>
   </ul>
 </nav>
 
-<a href="https://www.tiktok.com/@dunkin_nl?">
-	<img src="tiktok.jpg"  alt="Tiktok"></a>
-<a href="https://www.instagram.com/dunkindonutsnl/">
-	<img src="instagram.jpg"  alt="Instagram"></a>
-<a href="https://www.facebook.com/dunkindonutsnl">
-	<img src="facebook.jpg"  alt="Facebook"></a>
+  <ol>
+    <li><a href="https://www.tiktok.com/@dunkin_nl?">
+      <img src="images/tiktok.svg"  alt="Tiktok"></a></li>
+    <li><a href="https://www.instagram.com/dunkindonutsnl/">
+      <img src="images/insta.svg"  alt="Instagram"></a></li>
+    <li><a href="https://www.facebook.com/dunkindonutsnl">
+      <img src="images/facebook.svg"  alt="Facebook"></a></li>
+  </ol>
+  
+  <button>
+    Privacy Policy
+  </button>
+	  
+  <div>
+    2021 DD IP Holder | FAQ | Privacy Policy | Foodticket 
+  </div>
 
-<p>2021 DD IP Holder | FAQ | Privacy Policy | Foodticket </p>
-
-    </footer>
+</footer>
+    <a href="https://www.dunkin.nl/">Bron</a>
 
 	<script src="scripts/script.js"></script>
 </body>
-	
+
 </html>
