--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
   <a href="https://mailygh.github.io/blokweb/">
     <img src="images/Primary_Logo®_HEX.svg"  alt=""></a>
   </header>
-
+<!-- Contact gegevens --> 
 <main>
   <h2>CONTACT</h2>
   <h3>Neem contact op voor een offerte, hulp of sluit je aan bij ons team!</h3>
@@ -27,7 +27,7 @@
     <img src="images/contact.svg" alt="coffee">
     <p>INFO@DUNKINDONUTS.NL</p>
     <p>088-377 8884</p>
-   
+ <!-- Bericht verzenden -->   
   <h2><strong>JE BERICHT</strong></h2>
   
   <form action="./submitted.html">
@@ -41,7 +41,7 @@
       <input type="submit" value="Submit me!">
     </form>
 </main>
-
+<!-- Navigatie onderaan --> 
 <footer>
    <nav>
     <ul  class="nav">
@@ -51,7 +51,7 @@
     <li> <a href="index.html">OVER DUNKIN'</a> </li>
   </ul>
 </nav>
-
+<!-- Social media icons met links --> 
   <ol>
     <li><a href="https://www.tiktok.com/@dunkin_nl?">
       <img src="images/tiktok.svg"  alt="Tiktok"></a></li>
@@ -60,7 +60,7 @@
     <li><a href="https://www.facebook.com/dunkindonutsnl">
       <img src="images/facebook.svg"  alt="Facebook"></a></li>
   </ol>
-  
+  <!-- Privacy show/hide policy button --> 
   <button>
     Privacy Policy
   </button>
