--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <body>
 	<header>
 		<p>Voor 9 uur besteld, vandaag in huis!</p>
-	<!--<h1>DUNKIN</h1> -->
+	<!--<h1>DUNKIN</h1> --> 
 		<a href="https://mailygh.github.io/blokweb/index2.html">
 			<img src="images/Primary_Logo®_HEX.svg"  alt=""></a>
 	</header>
-
+<!-- Lijst opgedeeld in 5 onderdelen --> 
 <main>
 	<ul>
-		<!-- 1 -->
+		<!-- 1 type -->
 		<li>
 		<section>
 		<h2>WE LOVE COFFEE</h2>
 		<img src="images/Coffee.png" alt="coffee">	
 		</section>
 	</li>
-	<!-- 2 -->
+	<!-- 2 type -->
 	<li>
 		<section>
 		<h2>BESTEL!</h2>
@@ -40,7 +40,7 @@
 
 		</section>
 	</li>
-	<!-- 3 -->
+	<!-- 3 type-->
 	<li>
 	<section>
 		<h2><strong>App jij 'm al?</strong></h2>
@@ -52,7 +52,7 @@
 				<img src="images/appstore.svg"  alt="Get it on Google Play"></a>
 		</section>
 	</li>
-	<!-- 4 -->
+	<!-- 4 type -->
 	<li>
 		<section>
 			<h2><strong>Nieuw: Dunkin' Cloud Cakes</strong></h2>
@@ -61,7 +61,7 @@
 		</section>	
 		<a href="https://www.dunkin.nl/blogpost/dunkin-cloud-cakes">Lees meer</a>
 	</li>
-	<!-- 5 -->
+	<!-- 5 type -->
 	<li>
 		<section>
 			<h2><strong>DD NIEUWS</strong></h2>
@@ -69,7 +69,7 @@
 		</section>	
 	</li>
 	</ul>
-
+<!-- Article opgedeeld in sections --> 
 		<article>
 			<h2>BESTEL DUNKIN' ONLINE</h2>
 
@@ -96,7 +96,7 @@
 		<a href="https://www.dunkin.nl/order-now">Order now</a>
 		</article>
 </main>
-
+<!-- Navigatie onderaan --> 
 <footer>
 	<h2><img src="images/rondje.svg" alt="img"></h2>
 	
