--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
   <header>
   <p><strong>Voor 9 uur besteld, vandaag in huis!</strong></p>
    <!--<h1>DUNKIN</h1>-->
-  <a href="https://mailygh.github.io/blokweb/index.html">
+  <a href="https://mailygh.github.io/blokweb/">
     <img src="images/Primary_Logo®_HEX.svg"  alt=""></a>
   </header>
 <!-- Contact gegevens --> 
